# mAIgic-assistant

./: .env.template  .gitignore  README.md  SETUP.md  main.py  pyproject.toml
.circleci/: config.yml
.github/: pull_request_template.md
examples/: README.md  batch_transcription.py  realtime_transcription.py  streaming_transcription.py
src/mAIgic_core/: __init__.py  pyproject.toml
src/mAIgic_core/assistant/: __init__.py  exceptions.py  interfaces.py  types.py
src/mAIgic_core/llm/: __init__.py
src/mAIgic_core/llm/llm_api/: __init__.py  exceptions.py  interfaces.py  types.py
src/mAIgic_core/llm/llm_api/tests/: __init__.py  test_interfaces.py
src/mAIgic_core/utils/: __init__.py  intent_helpers.py  time_helpers.py  validation.py
src/mAIgic_integrations/: README.md  __init__.py  __main__.py  config.py  credentials.py  pyproject.toml  registry.py  setup.py
src/mAIgic_integrations/calendar/: README.md  __init__.py  pyproject.toml
src/mAIgic_integrations/calendar/calendar_api/: README.md  __init__.py  exceptions.py  interfaces.py  models.py  pyproject.toml
src/mAIgic_integrations/calendar/calendar_api/tests/: __init__.py  test_exceptions.py  test_interfaces.py  test_models.py
src/mAIgic_integrations/calendar/calendar_google_impl/: README.md  __init__.py  clients.py  config.py  providers.py  pyproject.toml
src/mAIgic_integrations/calendar/calendar_google_impl/examples/: README.md  basic_calendar_operations.py
src/mAIgic_integrations/calendar/calendar_google_impl/tests/: __init__.py  test_config.py  test_providers.py
src/mAIgic_integrations/email/: README.md  __init__.py
src/mAIgic_integrations/email/email_api/: __init__.py  exceptions.py  interfaces.py  models.py  pyproject.toml
src/mAIgic_integrations/email/email_api/tests/: __init__.py  test_exceptions.py  test_interfaces.py  test_models.py
src/mAIgic_integrations/email/email_gmail_impl/: README.md  __init__.py  clients.py  config.py  providers.py  pyproject.toml
src/mAIgic_integrations/email/email_gmail_impl/examples/: README.md  basic_gmail_operations.py
src/mAIgic_integrations/email/email_gmail_impl/tests/: __init__.py  test_clients.py  test_config.py
src/mAIgic_integrations/email/examples/: README.md  advanced_operations.py  basic_operations.py  credential_setup.py
src/mAIgic_speech/: README.md  __init__.py  pyproject.toml
src/mAIgic_speech/examples/: batch_transcription.py  realtime_transcription.py  streaming_transcription.py
src/mAIgic_speech/speech_api/: exceptions.py  interfaces.py  pyproject.toml  types.py
src/mAIgic_speech/speech_api/tests/: __init__.py  test_interfaces.py
src/mAIgic_speech/speech_openai_impl/: __init__.py  audio_sources.py  clients.py  config.py  pyproject.toml  sessions.py
src/mAIgic_speech/speech_openai_impl/tests/: conftest.py  test_audio_sources.py  test_clients.py  test_config.py  test_sessions.py
src/speech_api/: __init__.py  exceptions.py  interfaces.py  pyproject.toml  types.py
src/speech_api/tests/: test_interfaces.py
src/speech_openai_impl/: README.md  audio_sources.py  clients.py  pyproject.toml  sessions.py
src/speech_openai_impl/tests/: README.md  __init__.py  conftest.py  test_audio_sources.py  test_clients.py  test_config.py  test_sessions.py
