[project]
name = "maigic-integrations"
version = "0.1.0"
description = "mAIgic Integrations Component - External service integrations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mAIgic_integrations"] 