[project]
name = "maigic-speech"
version = "0.1.0"
description = "mAIgic Speech Component - Complete speech processing capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.8.0",
    "websockets>=11.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mAIgic_speech"] 