[project]
name = "maigic-speech"
version = "0.1.0"
description = "mAIgic Speech - Meta-package for speech processing capabilities"
requires-python = ">=3.12"
dependencies = [
    "maigic-core>=0.1.0",
    "maigic-speech-api>=0.1.0",
]

# Workspace sources are defined in root pyproject.toml

[project.optional-dependencies]
openai = [
    "maigic-speech-openai-impl>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mAIgic_speech"]