[project]
name = "maigic-calendar"
version = "0.1.0"
description = "mAIgic Calendar - Meta-package for calendar integration capabilities"
requires-python = ">=3.12"
dependencies = [
    "maigic-core>=0.1.0",
    "maigic-calendar-api>=0.1.0",
]

# Workspace sources are defined in root pyproject.toml

# [project.optional-dependencies]
# Future provider implementations will be added here
# google = [
#     "maigic-calendar-google>=0.1.0",
# ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["calendar"] 