[project]
name = "maigic-speech-api"
version = "0.1.0"
description = "mAIgic Speech API - Interface definitions for speech processing"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["speech_api"]