[project]
name = "maigic-speech-openai-impl"
version = "0.1.0"
description = "mAIgic OpenAI implementation for the Speech API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.8.0",
    "websockets>=11.0.0",
    "maigic-speech-api>=0.1.0",
    "pyaudio>=0.2.14"
]

# Workspace sources are defined in root pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["speech_openai_impl"] 