[project]
name = "maigic-calendar-google"
version = "0.1.0"
description = "mAIgic Google Calendar Implementation - Google-specific calendar integration"
requires-python = ">=3.12"
dependencies = [
    "maigic-calendar-api>=0.1.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0", 
    "google-api-python-client>=2.100.0",
    "pendulum>=3.0.0",
    "requests>=2.31.0",
    "pydantic>=2.4.0",
]

# Workspace sources are defined in root pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = ["-v"]
asyncio_mode = "auto" 